--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "myapp",
-    "short_name": "myapp",
+    "name": "Easy Expense",
+    "short_name": "Easy Expense",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
